# salesagent

./: .a2a_config.json  .coveragerc  .dockerignore  .env.bak2  .env.example  .env.orig  .env.secrets.template  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  A2A_REMAINING_WORK.md  A2A_SPEC_COMPLIANCE_FIXES.md  A2A_TEST_REORGANIZATION.md  ADCP_SPEC_ISSUES.md  ADCP_V1.2.1_MIGRATION_COMPLETE.md  ADMIN_UI_PRICING_TODO.md  ALEMBIC_MULTIPLE_HEADS_SOLUTION.md  ANALYSIS_ONEOF_ERROR_HANDLING.md  API_KEY_TEST_ANALYSIS.md  API_REFERENCE.md  ASYNC_AI_REVIEW_SUMMARY.md  AUDIT_RESULTS.md  AUDIT_non_spec_fields.md  AUTH_AUDIT_FINDINGS.md  BUDGET_FORMAT_FINDINGS.md  CHANGELOG.md  CHANGES.md  CI_TEST_FAILURE_ANALYSIS.md  CLAUDE.md  CONDUCTOR_CACHING_SUMMARY.md  CONDUCTOR_PORTS.md  CONDUCTOR_SETUP.md  CONTRIBUTING.md  CREATIVE_AGENT_BUG_REPORT.md  CREATIVE_AGENT_BUG_REPORT_V2.md  CREATIVE_AGENT_FORMAT_REQUIREMENTS.md  CREATIVE_CONSTRUCTION_REVIEW.md  CREATIVE_FORMATS_CLEANUP_NEEDED.md  CRITICAL_FIXES_APPLIED.md  (+313 more)
.changeset/: README.md  add-changeset-system.md
.github/: ISSUE_NATIVE_SUPPORT.md
.pre-commit-hooks/: check-gam-auth-support.py  check_hardcoded_urls.py  check_import_usage.py  check_parameter_alignment.py  check_route_conflicts.py
adapters/: SECURITY_OVERVIEW.md  __init__.py  base.py  constants.py  creative_engine.py  gam_error_handling.py  gam_geo_mappings.json  gam_health_check.py  gam_implementation_config_schema.py  gam_inventory_discovery.py  gam_logging.py  gam_orders_discovery.py  gam_reporting_api.py  gam_reporting_service.py  google_ad_manager.py  google_ad_manager_security.md  kevel.py  kevel_security.md  mock_ad_server.py  mock_ad_server_security.md  mock_creative_engine.py  triton_digital.py  triton_digital_security.md  xandr.py
adcp_agent/: agent.py
admin/: app.py  utils.py
alembic/: env.py
client/: main.py  pyproject.toml
creative_format_parsing_examples/: README.md
data/: foundational_creative_formats.json
docs/: ARCHITECTURE.md  ASSET_TYPE_MAPPING.md  BLUEPRINT_MIGRATION_CHECKLIST.md  CONTRACT_VALIDATION_PREVENTION.md  DEVELOPMENT.md  E2E_TESTING_GUIDE.md  HOSTING.md  MIGRATION_GUIDE.md  MOCK_ADAPTER_AI_TEST_ORCHESTRATION.md  OPERATIONS.md  PORT_MANAGEMENT.md  PREVENT_TENANT_LOCKOUT.md  README.md  SETUP.md  SHARED_HELPERS_SUMMARY.md  TROUBLESHOOTING.md  WEATHER_TENANT_ACCESS_ISSUE.md  api.md  (+93 more)
(+1157 files in other folders)
