[project]
name = "adcp-sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=2.10.6",
    "google-generativeai>=0.5.4",
    "rich>=13.7.1",
    "google-ads>=24.1.0",
    "requests>=2.32.3",
    "googleads>=46.0.0",
    "flask>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "authlib>=1.3.0",
    "requests-oauthlib>=1.3.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=6.0.0",
    "waitress>=3.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
ui-tests = [
    "playwright==1.48.0",
    "pytest-playwright==0.6.1",
    "pytest-asyncio>=1.1.0",
    "allure-pytest==2.13.5",
]

[dependency-groups]
dev = [
    "mocker>=1.1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
